--- a/index.html
+++ b/index.html
@@ -14,24 +14,36 @@
         }
 
         /* Header */
-        header{
-            background:#0d6efd;
-            color:white;
-            padding:20px 40px;
-            text-align:center;
-            box-shadow:0 2px 8px rgba(0,0,0,0.2);
-        }
+        .site-header{
+    background:#0d6efd;
+    color:white;
+    padding:15px 40px;
+    box-shadow:0 2px 8px rgba(0,0,0,0.2);
+}
 
-        header h1{
-            margin:0;
-            font-size:28px;
-        }
+.header-inner{
+    max-width:900px;
+    margin:auto;
+    display:flex;
+    align-items:center;
+    gap:15px;
+}
 
-        header p{
-            margin-top:5px;
-            font-size:14px;
-            opacity:0.9;
-        }
+.logo{
+    height:50px;      /* logo size */
+    width:auto;
+}
+
+.title h1{
+    margin:0;
+    font-size:26px;
+}
+
+.title p{
+    margin:4px 0 0;
+    font-size:14px;
+    opacity:0.9;
+}
 
         /* Main Content */
         .container{
