--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 }
 
 .logo{
-    height:50px;      /* logo size */
+    height:50px;
     width:auto;
+    background:transparent;
 }
 
 .title h1{
@@ -113,7 +114,7 @@
 
     <header class="site-header">
     <div class="header-inner">
-        <img src="logo.png" alt="AI Online Logo" class="logo">
+        <img src="logo.png" class="logo" alt="AI Online Logo">
         <div class="title">
             <h1>AI Online</h1>
             <p>Smart Digital & AI Based Services</p>
