--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
  /* Header */
 .site-header{
-    background:#0b1c2d; /* Dark Navy – best for your logo */
+    background:#ffffff; /* Dark Navy – best for your logo */
     padding:15px 20px;
     box-shadow:0 3px 10px rgba(0,0,0,0.4);
 }
@@ -43,7 +43,7 @@
 .brand-text h1{
     margin:0;
     font-size:26px;
-    color:#ffffff;
+    color:blue;
     letter-spacing:1px;
 }
 
