--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <header class="site-header">
     <div class="header-inner">
         <div class="logo-box">
-            <img src="logo.png" alt="AI Online Logo" class="logo">
+            <img src="logo.png" alt="AI Online Logo" class="logo"><br>
             <div class="brand-text">
                 <h1>AI Online</h1>
                 <p>Smart Digital & AI Based Services</p>
