--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 <header class="site-header">
     <div class="header-inner">
         <div class="logo-box">
-            <img src="logo.png" alt="AI Online Logo" class="logo"><br>
+            <img src="logo.png" alt="AI Online Logo" class="logo">
             <div class="brand-text">
-                <h1>AI Online</h1>
+               <br> <h1>AI Online</h1>
                 <p>Smart Digital & AI Based Services</p>
             </div>
         </div>
