--- a/index.html
+++ b/index.html
@@ -145,6 +145,11 @@
             </div>
         </div>
     </div>
+    <nav>
+<!--    <a href="index.html">Home</a>
+    <a href="about.html">About</a>-->
+    <a href="contact.html" class="active">Contact</a>
+    </nav>
 </header>
 
     <div class="container">
