--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             padding:12px 15px;
             border-radius:6px;
             font-weight:600;
+            color:#e01642;
         }
 
         ul li ul{
@@ -107,7 +108,8 @@
         }
 
         ul li ul li{
-            background:#ffffff;
+          /*  background:#ffffff;*/
+            color:#5a16e0;
             font-weight:normal;
             border-left:4px solid #0d6efd;
             padding:8px 12px;
