--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
  /* Header */
 .site-header{
-    background:#ffffff; /* Dark Navy – best for your logo */
+    background:#0d6efd; 
     padding:15px 20px;
     box-shadow:0 3px 10px rgba(0,0,0,0.4);
 }
