--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
  /* Header */
 .site-header{
     background:#0d6efd; 
+    color:#ffffff;
     padding:15px 20px;
     box-shadow:0 3px 10px rgba(0,0,0,0.4);
 }
