--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
  /* Header */
 .site-header{
     background:#0d6efd; 
-    color:#ffffff;
+    color: white;
     padding:15px 20px;
     box-shadow:0 3px 10px rgba(0,0,0,0.4);
 }
 
 /* Header container */
 .header-inner{
-    color:#ffffff;
+    color: white;
     max-width:1100px;
     margin:auto;
 }
@@ -36,7 +36,7 @@
 
 /* Logo */
 .logo{
-    height:55px;
+    height:77px;
     width:auto;
     filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));
 }
