--- a/index.html
+++ b/index.html
@@ -13,20 +13,25 @@
             color:#333;
         }
  /* Header */
-.site-header{
-    background:#0d6efd; 
-    color: white;
-    padding:15px 20px;
-    box-shadow:0 3px 10px rgba(0,0,0,0.4);
-}
+        header{
+            background:#0d6efd;
+            color:#ffffff;
+            padding:20px 40px;
+            text-align:center;
+            box-shadow:0 2px 8px rgba(0,0,0,0.2);
+        }
 
-/* Header container */
-.header-inner{
-    color: white;
-    max-width:1100px;
-    margin:auto;
-}
+        header h1{
+            margin:0;
+            font-size:28px;
+            letter-spacing:0.5px;
+        }
 
+        header p{
+            margin-top:5px;
+            font-size:14px;
+            color:#e8f1ff;
+        }
 /* Logo + Text */
 .logo-box{
     display:flex;
