--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 .brand-text h1{
     margin:0;
     font-size:26px;
-    color:blue;
+    color: white;
     letter-spacing:1px;
 }
 
 .brand-text p{
     margin:2px 0 0;
     font-size:13px;
-    color:blue;
+    color: white;
 }
 
 /* Mobile Responsive */
