--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div class="brand-text">
                 <p>Smart Digital & AI Based Services</p>
                 <nav>
-                    <a href="contact.html" class="active" style="color: white;">Contact</a>
+                    <a href="contact.html" class="active" style="color: yellow;">Contact</a>
                 </nav>
             </div>
         </div>
