--- a/income_tax_software.html
+++ b/income_tax_software.html
@@ -18,18 +18,18 @@ a{background:#007bff;color: blue; padding:12px 25px;text-decoration:none;border-
 এই ধরনের ক্ষেত্রে সাধারণত নিম্নলিখিত সমস্যাগুলি দেখা যায়—</p>
 
   <h2>প্রচলিত সমস্যাসমূহ</h2>
-<p>(ক) বিপুল সংখ্যক কর্মীর ইনকাম ট্যাক্সের হিসাব করা অত্যন্ত জটিল
-(খ) সকল কর্মীর ট্যাক্স হিসাব করতে প্রচুর সময় ব্যয় হয়
-(গ) অনেক ক্ষেত্রে সঠিক হিসাব না হওয়ার আশঙ্কা থাকে
-(ঘ) ট্যাক্স সংক্রান্ত একাধিক নিয়ম ও তথ্য মাথায় রেখে নির্ভুল হিসাব করা কঠিন
-(ঙ) বহিরাগত ব্যক্তির মাধ্যমে হিসাব করালে কর্মীদের ব্যক্তিগত তথ্য ফাঁস হওয়ার ঝুঁকি থাকে
+<p>(ক) বিপুল সংখ্যক কর্মীর ইনকাম ট্যাক্সের হিসাব করা অত্যন্ত জটিল<br>
+(খ) সকল কর্মীর ট্যাক্স হিসাব করতে প্রচুর সময় ব্যয় হয়<br>
+(গ) অনেক ক্ষেত্রে সঠিক হিসাব না হওয়ার আশঙ্কা থাকে<br>
+(ঘ) ট্যাক্স সংক্রান্ত একাধিক নিয়ম ও তথ্য মাথায় রেখে নির্ভুল হিসাব করা কঠিন<br>
+(ঙ) বহিরাগত ব্যক্তির মাধ্যমে হিসাব করালে কর্মীদের ব্যক্তিগত তথ্য ফাঁস হওয়ার ঝুঁকি থাকে<br>
 এই সমস্ত সমস্যার সহজ, নিরাপদ ও দ্রুত সমাধান হিসেবেই এই Excel-based Income Tax Softwareটি তৈরি করা হয়েছে।</p>
 
   <h2>সফটওয়্যারটির বিশেষ সুবিধা</h2>
-<p>✔️ খুব অল্প সময়ে সকল কর্মীর ইনকাম ট্যাক্স হিসাব
-✔️ সম্পূর্ণ Offline – Internet প্রয়োজন নেই
-✔️ কর্মীদের তথ্য সম্পূর্ণ নিরাপদ
-✔️ এক ক্লিকে হিসাব ও FORM-16 প্রস্তুত
+<p>✔️ খুব অল্প সময়ে সকল কর্মীর ইনকাম ট্যাক্স হিসাব<br>
+✔️ সম্পূর্ণ Offline – Internet প্রয়োজন নেই<br>
+✔️ কর্মীদের তথ্য সম্পূর্ণ নিরাপদ<br>
+✔️ এক ক্লিকে হিসাব ও FORM-16 প্রস্তুত<br>
 ✔️ ভুলের সম্ভাবনা প্রায় শূন্য</p>
   
 <h2>OSMS ভিত্তিক আধুনিক প্রযুক্তি</h2>
@@ -39,36 +39,39 @@ a{background:#007bff;color: blue; padding:12px 25px;text-decoration:none;border-
 এই সরকারি পদ্ধতিকে ভিত্তি করেই সফটওয়্যারটি ডিজাইন করা হয়েছে।</p>
 
 <h2>সফটওয়্যারটি যেভাবে কাজ করে (মাত্র ৩ ধাপে)</h2>
-<p>🔹 ধাপ–১
+<p>🔹 ধাপ–১<br>
 OSMS ওয়েবসাইট থেকে সকল কর্মীর ১২ মাসের বেতনের Excel Sheet ডাউনলোড করুন
-⏱️ সময় লাগবে মাত্র ২ মিনিট (ভিডিও সহ)
-🔹 ধাপ–২
+⏱️ সময় লাগবে মাত্র ২ মিনিট (ভিডিও সহ)<br>
+🔹 ধাপ–২<br>
 ডাউনলোড করা Excel Sheet সফটওয়্যারে Upload করুন
-⏱️ সময় লাগবে মাত্র ২ মিনিট (ভিডিও সহ)
-🔹 ধাপ–৩
+⏱️ সময় লাগবে মাত্র ২ মিনিট (ভিডিও সহ)<br>
+🔹 ধাপ–৩<br>
 এক ক্লিকে সকল কর্মীর ইনকাম ট্যাক্স হিসাব সম্পন্ন করুন
 ⏱️ ৫ মিনিটেরও কম সময়ে (ভিডিও সহ)</p>
 
   <h2>বাস্তব অভিজ্ঞতা ও বিশ্বাসযোগ্যতা</h2>
 <p>গত ৫ বছরেরও বেশি সময় ধরে, নিম্নলিখিত অবর বিদ্যালয় পরিদর্শকের অফিসসমূহে এই সফটওয়্যার সফলভাবে ব্যবহৃত হচ্ছে—
-লাভপুর চক্র
-লাভপুর দক্ষিণ চক্র
-নলহাটি পশ্চিম চক্র (বীরভূম)
-রানিবাঁধ চক্র ও রানিবাঁধ উত্তর চক্র
-পাত্রসায়ের ও পাত্রসায়ের উত্তর চক্র (বাঁকুড়া)
-রায়না–৩ চক্র (পূর্ব বর্ধমান)
-সদর সাউথ (বহরমপুর)
-ময়না ও হলদিয়া চক্র (পূর্ব মেদিনীপুর)
+লাভপুর চক্র<br>
+লাভপুর দক্ষিণ চক্র<br>
+নলহাটি পশ্চিম চক্র (বীরভূম)<br>
+রানিবাঁধ চক্র ও রানিবাঁধ উত্তর চক্র<br>
+পাত্রসায়ের ও পাত্রসায়ের উত্তর চক্র (বাঁকুড়া)<br>
+রায়না–৩ চক্র (পূর্ব বর্ধমান)<br>
+সদর সাউথ (বহরমপুর)<br>
+ময়না ও হলদিয়া চক্র (পূর্ব মেদিনীপুর)<br>
 এই সকল অফিসের অধীনে প্রায় ৬০০০ প্রাথমিক শিক্ষক/শিক্ষিকার
 ইনকাম ট্যাক্স হিসাব ও FORM-16 প্রস্তুত করা হয়েছে এবং হচ্ছে এই সফটওয়্যারটির মাধ্যমে।</p>
 
 <h2>সিদ্ধান্ত আপনার</h2>
 <p>প্রত্যেক S.I. of Schools অফিস এই সফটওয়্যার ব্যবহার করলে—
-সময় বাঁচবে
-ভুল কমবে
-তথ্য থাকবে নিরাপদ
+সময় বাঁচবে,
+ভুল কমবে,
+তথ্য থাকবে নিরাপদ,
 কাজ হবে দ্রুত ও নির্ভুল</p>
 <h2>✅ তাই আর দেরি না করে আজই এই সফটওয়্যারটি ব্যবহার শুরু করুন।</h2>
 
+  <nav>
+                    <a href="contact.html" class="active" style="color: yellow;">Contact</a>
+  </nav>
 </body>
 </html>
