--- a/income_tax_software.html
+++ b/income_tax_software.html
@@ -6,8 +6,8 @@
 <title>UPI Payment</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body{text-align:center;font-family:Arial;padding:50px;background:white; color: blue;}
-a{background:#007bff;color: blue; padding:12px 25px;text-decoration:none;border-radius:6px}
+body{text-align:left;font-family:Arial;padding:50px;background:white; color: blue;}
+a{background:#007bff;color: yellow; padding:12px 25px;text-decoration:none;border-radius:6px}
 </style>
 </head>
 <body>
