--- a/income_tax_software.html
+++ b/income_tax_software.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body{text-align:left;font-family:Arial;padding:50px;background:white; color: blue;}
-a{color: purple; font-weight: bold;}
+a{color: purple; font-size: 27px; font-weight: bold;}
 </style>
 </head>
 <body>
