--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ https://aionline.in.net/income_tax_software.html
                 Income Tax
                 <ul>
                     <li><a href="https://aionline.in.net/income_tax_software.html">Income Tax Calculation Software </a>(Rs. 2000/-)</li>
-                    <li>Income Tax Calculator (Free)</li>
+                    <li><a href="https://aionline.in.net/2025-26_Income_Tax_Calculator.html">Income Tax Calculator </a>(Free)</li>
                     <li>Form 16 (Under consruction)</li>
                 </ul>
             </li>
