--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
  /* Header */
         header{
-            background:#0d6efd;
+            background:#0D5FE1;
             color:#ffffff;
             padding:20px 40px;
             text-align:center;
