--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -217,7 +217,7 @@ th{
      <div id="table_container"></div>
     </div>
 
-
+ 
 <script>
     //email id checking 
     const allowedEmails = [
@@ -696,6 +696,8 @@ document.getElementById("prev_btn").addEventListener("click", () => navigateEmpl
 document.getElementById("next_btn").addEventListener("click", () => navigateEmployee('next'));
             
 </script>
+    Signature of Teacher
 <div class="watermark">https://aionline.in.net</div>
+    
 </body>
 </html>
