--- a/Salary_Statement.html
+++ b/Salary_Statement.html
@@ -696,7 +696,8 @@ document.getElementById("prev_btn").addEventListener("click", () => navigateEmpl
 document.getElementById("next_btn").addEventListener("click", () => navigateEmployee('next'));
             
 </script>
-    Signature of Teacher
+    <br><br><br><br>
+    <p style="text-align: right; font-size:16px">Signature of Teacher</p>
 <div class="watermark">https://aionline.in.net</div>
     
 </body>
