--- a/Form16.html
+++ b/Form16.html
@@ -99,7 +99,7 @@ button{
     body{background:#fff;}
     footer{display:none;}
   a{display:none;}
-  container2{display:none;}
+  .container2{display:none;}
     }
  
   </style>
