--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -8,6 +8,7 @@
     body {
       font-family: 'Bookman Old Style', serif;
       background-color: rgb(241, 252, 251);
+      width: 90%;
     }
     
         /* Logo + Text */
@@ -82,8 +83,9 @@ button{
 </div>
   <table>
     <tr> <th>
-      Special Educator TET – সম্ভাব্য সিলেবাস (Primary Level)
-১️⃣ Child Development & Pedagogy (বিশেষ গুরুত্ব)
+      
+<h1>Special Educator TET – সম্ভাব্য সিলেবাস (Primary Level)</h1>
+  <h2> Child Development & Pedagogy (বিশেষ গুরুত্ব)</h2>
 Child Development (0–11 বছর)
 Learning theories (Piaget, Vygotsky ইত্যাদি)
 Inclusive Education
