--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -85,16 +85,16 @@ button{
     <tr> <th>
       
 <h1>Special Educator TET – সম্ভাব্য সিলেবাস (Primary Level)</h1>
-  <h2> Child Development & Pedagogy (বিশেষ গুরুত্ব)</h2>
+  <h2>1) Child Development & Pedagogy (বিশেষ গুরুত্ব)</h2>
 Child Development (0–11 বছর)
 Learning theories (Piaget, Vygotsky ইত্যাদি)
 Inclusive Education
 Children with Special Needs (CWSN)
 Learning Difficulties & Learning Disabilities
 Understanding individual differences
-২️⃣ Special Education (Core Area)
+<h2>2) Special Education (Core Area)</h2>
 👉 এটা সবচেয়ে গুরুত্বপূর্ণ অংশ
-A. Types of Disabilities
+<h4>A. Types of Disabilities</h4>
 Intellectual Disability (ID)
 Learning Disability (LD)
 Autism Spectrum Disorder (ASD)
@@ -102,51 +102,51 @@ Hearing Impairment
 Visual Impairment
 Locomotor Disability
 Multiple Disabilities
-B. Identification & Assessment
+<h4>B. Identification & Assessment</h4>
 Early identification
 Screening tools
 Functional assessment
-C. Teaching Strategies
+<h4>C. Teaching Strategies</h4>
 IEP (Individualized Education Programme)
 Teaching aids & assistive devices
 Classroom management for CWSN
 Behaviour modification techniques
-D. Acts, Policies & Rights
+<h4>D. Acts, Policies & Rights</h4>
 RPwD Act, 2016
 RCI Act
 Inclusive Education policies
 National Education Policy (NEP 2020 – special education related parts)
-৩️⃣ Language – I (বাংলা / উর্দু / হিন্দি / নেপালি – যেটি নির্বাচন করবেন)
+<h2>3) Language – I (বাংলা / উর্দু / হিন্দি / নেপালি – যেটি নির্বাচন করবেন)</h2>
 Comprehension
 Grammar
 Pedagogy of Language Development
 Language teaching for CWSN
-৪️⃣ Language – II (English)
+<h2>4) Language – II (English)</h2>
 Basic comprehension
 Grammar
 Pedagogy of English language
 Teaching English to special children
-৫️⃣ Mathematics
+<h2>5) Mathematics</h2>
 Number system
 Arithmetic (addition, subtraction, multiplication, division)
 Geometry (basic)
 Data handling
 Pedagogy of Mathematics
 Teaching Maths to children with special needs
-৬️⃣ Environmental Studies (EVS)
+<h2>6) Environmental Studies (EVS)</h2>
 Family & surroundings
 Plants & animals
 Food, water, shelter
 Health & hygiene
 Pedagogy of EVS
 EVS teaching strategies for CWSN
-📝 Exam Pattern (সম্ভাব্য)
+<h2>📝 Exam Pattern (সম্ভাব্য)</h2>
 MCQ (Objective)
 মোট প্রশ্ন: সাধারণত 150
 মোট নম্বর: 150
 সময়: 2.5 ঘণ্টা
 Negative marking: সাধারণত থাকে না (নোটিফিকেশন দেখে নিশ্চিত হতে হবে)
-📌 যোগ্যতা (সাধারণত যা লাগে)
+<h2>📌 যোগ্যতা (সাধারণত যা লাগে)</h2>
 D.El.Ed / B.Ed (Special Education)
 RCI Registration বাধ্যতামূলক
     </th>
