--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -86,68 +86,68 @@ button{
       
 <h1>Special Educator TET – সম্ভাব্য সিলেবাস (Primary Level)</h1>
   <h2>1) Child Development & Pedagogy (বিশেষ গুরুত্ব)</h2>
-Child Development (0–11 বছর)
-Learning theories (Piaget, Vygotsky ইত্যাদি)
-Inclusive Education
-Children with Special Needs (CWSN)
-Learning Difficulties & Learning Disabilities
-Understanding individual differences
+Child Development (0–11 বছর)<br>
+Learning theories (Piaget, Vygotsky ইত্যাদি)<br>
+Inclusive Education<br>
+Children with Special Needs (CWSN)<br>
+Learning Difficulties & Learning Disabilities<br>
+Understanding individual differences<br>
 <h2>2) Special Education (Core Area)</h2>
-👉 এটা সবচেয়ে গুরুত্বপূর্ণ অংশ
+👉 এটা সবচেয়ে গুরুত্বপূর্ণ অংশ<br>
 <h4>A. Types of Disabilities</h4>
-Intellectual Disability (ID)
-Learning Disability (LD)
-Autism Spectrum Disorder (ASD)
-Hearing Impairment
-Visual Impairment
-Locomotor Disability
-Multiple Disabilities
+Intellectual Disability (ID)<br>
+Learning Disability (LD)<br>
+Autism Spectrum Disorder (ASD)<br>
+Hearing Impairment<br>
+Visual Impairment<br>
+Locomotor Disability<br>
+Multiple Disabilities<br>
 <h4>B. Identification & Assessment</h4>
-Early identification
-Screening tools
-Functional assessment
+Early identification<br>
+Screening tools<br>
+Functional assessment<br>
 <h4>C. Teaching Strategies</h4>
 IEP (Individualized Education Programme)
-Teaching aids & assistive devices
-Classroom management for CWSN
-Behaviour modification techniques
+Teaching aids & assistive devices<br>
+Classroom management for CWSN<br>
+Behaviour modification techniques<br>
 <h4>D. Acts, Policies & Rights</h4>
-RPwD Act, 2016
-RCI Act
-Inclusive Education policies
-National Education Policy (NEP 2020 – special education related parts)
+RPwD Act, 2016<br>
+RCI Act<br>
+Inclusive Education policies<br>
+National Education Policy (NEP 2020 – special education related parts)<br>
 <h2>3) Language – I (বাংলা / উর্দু / হিন্দি / নেপালি – যেটি নির্বাচন করবেন)</h2>
-Comprehension
-Grammar
-Pedagogy of Language Development
-Language teaching for CWSN
+Comprehension<br>
+Grammar<br>
+Pedagogy of Language Development<br>
+Language teaching for CWSN<br>
 <h2>4) Language – II (English)</h2>
-Basic comprehension
-Grammar
-Pedagogy of English language
-Teaching English to special children
+Basic comprehension<br>
+Grammar<br>
+Pedagogy of English language<br>
+Teaching English to special children<br>
 <h2>5) Mathematics</h2>
-Number system
-Arithmetic (addition, subtraction, multiplication, division)
-Geometry (basic)
-Data handling
-Pedagogy of Mathematics
-Teaching Maths to children with special needs
+Number system<br>
+Arithmetic (addition, subtraction, multiplication, division)<br>
+Geometry (basic)<br>
+Data handling<br>
+Pedagogy of Mathematics<br>
+Teaching Maths to children with special needs<br>
 <h2>6) Environmental Studies (EVS)</h2>
-Family & surroundings
-Plants & animals
-Food, water, shelter
-Health & hygiene
-Pedagogy of EVS
-EVS teaching strategies for CWSN
+Family & surroundings<br>
+Plants & animals<br>
+Food, water, shelter<br>
+Health & hygiene<br>
+Pedagogy of EVS<br>
+EVS teaching strategies for CWSN<br>
 <h2>📝 Exam Pattern (সম্ভাব্য)</h2>
-MCQ (Objective)
-মোট প্রশ্ন: সাধারণত 150
-মোট নম্বর: 150
-সময়: 2.5 ঘণ্টা
-Negative marking: সাধারণত থাকে না (নোটিফিকেশন দেখে নিশ্চিত হতে হবে)
+MCQ (Objective)<br>
+মোট প্রশ্ন: সাধারণত 150<br>
+মোট নম্বর: 150<br>
+সময়: 2.5 ঘণ্টা<br>
+Negative marking: সাধারণত থাকে না (নোটিফিকেশন দেখে নিশ্চিত হতে হবে)<br>
 <h2>📌 যোগ্যতা (সাধারণত যা লাগে)</h2>
-D.El.Ed / B.Ed (Special Education)
+D.El.Ed / B.Ed (Special Education)<br>
 RCI Registration বাধ্যতামূলক
     </th>
     </tr>
