--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -17,7 +17,7 @@
     top: 90%;
     left: 11%;
     display:flex;
-    align-items:left;
+    align-items: centre;
   
 }
 
@@ -45,7 +45,7 @@
     th {
       border-bottom: 2px solid blue;
       color: blue;
-      text-align: center;
+      text-align: left;
     }
       .footer{
     margin-top:5px;
