--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -46,6 +46,7 @@
       border-bottom: 2px solid blue;
       color: blue;
       text-align: left;
+      margin-top:20px;
     }
       .footer{
     margin-top:5px;
@@ -94,7 +95,7 @@ Learning Difficulties & Learning Disabilities<br>
 Understanding individual differences<br>
 <h2>2) Special Education (Core Area)</h2>
 👉 এটা সবচেয়ে গুরুত্বপূর্ণ অংশ<br>
-<h4>A. Types of Disabilities</h4>
+<h3>A. Types of Disabilities</h3>
 Intellectual Disability (ID)<br>
 Learning Disability (LD)<br>
 Autism Spectrum Disorder (ASD)<br>
@@ -102,16 +103,16 @@ Hearing Impairment<br>
 Visual Impairment<br>
 Locomotor Disability<br>
 Multiple Disabilities<br>
-<h4>B. Identification & Assessment</h4>
+<h3>B. Identification & Assessment</h3>
 Early identification<br>
 Screening tools<br>
 Functional assessment<br>
-<h4>C. Teaching Strategies</h4>
+<h3>C. Teaching Strategies</h3>
 IEP (Individualized Education Programme)
 Teaching aids & assistive devices<br>
 Classroom management for CWSN<br>
 Behaviour modification techniques<br>
-<h4>D. Acts, Policies & Rights</h4>
+<h3>D. Acts, Policies & Rights</h3>
 RPwD Act, 2016<br>
 RCI Act<br>
 Inclusive Education policies<br>
