--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -44,9 +44,13 @@
     }
     th {
       border-bottom: 2px solid blue;
-      color: blue;
+      color: black;
       text-align: left;
       margin-top:20px;
+    }
+    h1,h2,h3{
+    margin:0px;
+    color: blue;
     }
       .footer{
     margin-top:5px;
