--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -46,7 +46,7 @@
       border-bottom: 2px solid blue;
       color: black;
       text-align: left;
-      margin-top:20px;
+      margin-left:20px;
     }
     h1,h2,h3{
     margin:0px;
@@ -96,9 +96,9 @@ Learning theories (Piaget, Vygotsky ইত্যাদি)<br>
 Inclusive Education<br>
 Children with Special Needs (CWSN)<br>
 Learning Difficulties & Learning Disabilities<br>
-Understanding individual differences<br>
+Understanding individual differences<br><br>
 <h2>2) Special Education (Core Area)</h2>
-👉 এটা সবচেয়ে গুরুত্বপূর্ণ অংশ<br>
+👉 এটা সবচেয়ে গুরুত্বপূর্ণ অংশ<br><br>
 <h3>A. Types of Disabilities</h3>
 Intellectual Disability (ID)<br>
 Learning Disability (LD)<br>
@@ -106,51 +106,51 @@ Autism Spectrum Disorder (ASD)<br>
 Hearing Impairment<br>
 Visual Impairment<br>
 Locomotor Disability<br>
-Multiple Disabilities<br>
+Multiple Disabilities<br><br>
 <h3>B. Identification & Assessment</h3>
 Early identification<br>
 Screening tools<br>
-Functional assessment<br>
+Functional assessment<br><br>
 <h3>C. Teaching Strategies</h3>
 IEP (Individualized Education Programme)
 Teaching aids & assistive devices<br>
 Classroom management for CWSN<br>
-Behaviour modification techniques<br>
+Behaviour modification techniques<br><br>
 <h3>D. Acts, Policies & Rights</h3>
 RPwD Act, 2016<br>
 RCI Act<br>
 Inclusive Education policies<br>
-National Education Policy (NEP 2020 – special education related parts)<br>
+National Education Policy (NEP 2020 – special education related parts)<br><br>
 <h2>3) Language – I (বাংলা / উর্দু / হিন্দি / নেপালি – যেটি নির্বাচন করবেন)</h2>
 Comprehension<br>
 Grammar<br>
 Pedagogy of Language Development<br>
-Language teaching for CWSN<br>
+Language teaching for CWSN<br><br>
 <h2>4) Language – II (English)</h2>
 Basic comprehension<br>
 Grammar<br>
 Pedagogy of English language<br>
-Teaching English to special children<br>
+Teaching English to special children<br><br>
 <h2>5) Mathematics</h2>
 Number system<br>
 Arithmetic (addition, subtraction, multiplication, division)<br>
 Geometry (basic)<br>
 Data handling<br>
 Pedagogy of Mathematics<br>
-Teaching Maths to children with special needs<br>
+Teaching Maths to children with special needs<br><br>
 <h2>6) Environmental Studies (EVS)</h2>
 Family & surroundings<br>
 Plants & animals<br>
 Food, water, shelter<br>
 Health & hygiene<br>
 Pedagogy of EVS<br>
-EVS teaching strategies for CWSN<br>
+EVS teaching strategies for CWSN<br><br>
 <h2>📝 Exam Pattern (সম্ভাব্য)</h2>
 MCQ (Objective)<br>
 মোট প্রশ্ন: সাধারণত 150<br>
 মোট নম্বর: 150<br>
 সময়: 2.5 ঘণ্টা<br>
-Negative marking: সাধারণত থাকে না (নোটিফিকেশন দেখে নিশ্চিত হতে হবে)<br>
+Negative marking: সাধারণত থাকে না (নোটিফিকেশন দেখে নিশ্চিত হতে হবে)<br><br>
 <h2>📌 যোগ্যতা (সাধারণত যা লাগে)</h2>
 D.El.Ed / B.Ed (Special Education)<br>
 RCI Registration বাধ্যতামূলক
