--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -39,14 +39,14 @@
     }
     th, td {
       border: 1px solid #ccc;
-      padding-right:5px;
+      padding-left:20px;
       text-align: left;
     }
     th {
       border-bottom: 2px solid blue;
       color: black;
       text-align: left;
-      margin-left:20px;
+     /* margin-left:20px;*/
     }
     h1,h2,h3{
     margin:0px;
@@ -88,7 +88,7 @@ button{
 </div>
   <table>
     <tr> <th>
-      
+      <br>
 <h1>Special Educator TET – সম্ভাব্য সিলেবাস (Primary Level)</h1>
   <h2>1) Child Development & Pedagogy (বিশেষ গুরুত্ব)</h2>
 Child Development (0–11 বছর)<br>
@@ -153,7 +153,7 @@ MCQ (Objective)<br>
 Negative marking: সাধারণত থাকে না (নোটিফিকেশন দেখে নিশ্চিত হতে হবে)<br><br>
 <h2>📌 যোগ্যতা (সাধারণত যা লাগে)</h2>
 D.El.Ed / B.Ed (Special Education)<br>
-RCI Registration বাধ্যতামূলক
+RCI Registration বাধ্যতামূলক<br>
     </th>
     </tr>
         
