--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -81,8 +81,8 @@ button{
 
 <body>
 <div class="logo-box">
-     <img src="logo.png" alt="AI Online Logo" class="logo">
-     &emsp;&emsp; https://aionline.in.net
+     <img src="logo.png" alt="AI Online Logo" class="logo"><br>
+     https://aionline.in.net
 </div>
   
   <div>
