--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -14,7 +14,7 @@
         /* Logo + Text */
 .logo-box{
   position: fixed;
-    top: 70%;
+    top: 57%;
     right: 17%;
     display:flex;
     align-items: centre;
@@ -81,8 +81,8 @@ button{
 
 <body>
 <div class="logo-box">
-     <img src="logo.png" alt="AI Online Logo" class="logo"><br>
-     https://aionline.in.net
+     <img src="logo.png" alt="AI Online Logo" class="logo">
+    <h3> https://aionline.in.net</h3>
 </div>
   
   <div>
