--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -87,7 +87,7 @@ button{
   <div>
   <table>
     <tr> <th>
-      <br>
+    
       &emsp;&emsp;&emsp;&emsp;&emsp;<h3> https://aionline.in.net</h3><br>
 <h1>Special Educator TET – সম্ভাব্য সিলেবাস (Primary Level)</h1>
   <h2>1) Child Development & Pedagogy (বিশেষ গুরুত্ব)</h2>
@@ -153,7 +153,7 @@ MCQ (Objective)<br>
 Negative marking: সাধারণত থাকে না (নোটিফিকেশন দেখে নিশ্চিত হতে হবে)<br><br>
 <h2>📌 যোগ্যতা (সাধারণত যা লাগে)</h2>
 D.El.Ed / B.Ed (Special Education)<br>
-RCI Registration বাধ্যতামূলক<br><br>
+RCI Registration বাধ্যতামূলক<br>
 &emsp;&emsp;&emsp;&emsp;&emsp;      
 <h3> https://aionline.in.net</h3><br>
       
