--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -120,7 +120,7 @@ Behaviour modification techniques<br><br>
 RPwD Act, 2016<br>
 RCI Act<br>
 Inclusive Education policies<br>
-National Education Policy (NEP 2020 – special education related parts)<br><br>
+National Education Policy (NEP 2020 – special education related parts)<br><br><br>
 <h2>3) Language – I (বাংলা / উর্দু / হিন্দি / নেপালি – যেটি নির্বাচন করবেন)</h2>
 Comprehension<br>
 Grammar<br>
