--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -14,7 +14,7 @@
         /* Logo + Text */
 .logo-box{
   position: fixed;
-    top: 47%;
+    top: 51%;
     right: 17%;
     display:flex;
     align-items: centre;
@@ -117,7 +117,7 @@ Behaviour modification techniques<br><br>
 RPwD Act, 2016<br>
 RCI Act<br>
 Inclusive Education policies<br>
-National Education Policy (NEP 2020 – special education related parts)<br><br>
+National Education Policy (NEP 2020 – special education related parts)<br><br><br>
 <h2>3) Language – I (বাংলা / উর্দু / হিন্দি / নেপালি – যেটি নির্বাচন করবেন)</h2>
 Comprehension<br>
 Grammar<br>
