--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -39,7 +39,7 @@
     }
     th, td {
       border: 1px solid #ccc;
-      padding-left:20px;
+      padding:20px;
       text-align: left;
     }
     th {
@@ -117,7 +117,7 @@ Behaviour modification techniques<br><br>
 RPwD Act, 2016<br>
 RCI Act<br>
 Inclusive Education policies<br>
-National Education Policy (NEP 2020 – special education related parts)<br><br><br>
+National Education Policy (NEP 2020 – special education related parts)<br><br>
 <h2>3) Language – I (বাংলা / উর্দু / হিন্দি / নেপালি – যেটি নির্বাচন করবেন)</h2>
 Comprehension<br>
 Grammar<br>
