--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -72,7 +72,7 @@ button{
     .print-btn{display:none;}
     body{background:#fff;}
     footer{display:none;}
-  a{display:none;}
+    th{padding:20px;}
 }
   </style>
 </head>
