--- a/SpecialEducatorTET.html
+++ b/SpecialEducatorTET.html
@@ -119,7 +119,7 @@ RPwD Act, 2016<br>
 RCI Act<br>
 Inclusive Education policies<br>
 National Education Policy (NEP 2020 – special education related parts)<br><br>
-<h2>3) Language – I (বাংলা / উর্দু / হিন্দি / নেপালি)</h2>
+<h2>3) Language – I (বাংলা / হিন্দি / নেপালি)</h2>
 Comprehension<br>
 Grammar<br>
 Pedagogy of Language Development<br>
