Update and rename SpecialEducatorTET.html to SpecialEducationTET.html

--- a/SpecialEducationTET.html
+++ b/SpecialEducationTET.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FY 2025-26 Form 16_New Regime</title>
+  <title>Special Education TET Syllabus</title>
   <style>
     body {
       font-family: 'Bookman Old Style', serif;
