--- a/index.html
+++ b/index.html
@@ -179,6 +179,14 @@
             </li>
 
             <li>
+                <a href="https://aionline.in.net/SpecialEducationTET.html">Special Education</a>
+             <!--   <ul>
+                    <li>Coming soon</li>
+                    
+                </ul>-->
+            </li>
+            
+            <li>
                 Others
                 <ul>
                     <li>Coming soon</li>
