--- a/SpecialEducationTET.html
+++ b/SpecialEducationTET.html
@@ -175,7 +175,7 @@ RCI Registration বাধ্যতামূলক<br>
 
    <br><br>
     
-   <a href='https://www.counters-free.net/'>Get Counters Free!</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=5f1cbd3134fc3826f028df86839fe2af813999b8'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1495678/t/1"></script>
+ <a href='https://www.free-counters.org/'>free Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=ae087a3b935a9fd13721d1107334fffc5e7bee29'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1498135/t/1"></script>
  </body>
 </html>
