--- a/SplEdMcq.html
+++ b/SplEdMcq.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <title>WB Special Educator TET – Set 1 (বাংলা)</title>
 
+    <style>
+        body {
+            font-family: "Noto Sans Bengali", "SolaimanLipi", Arial, sans-serif;
+            background: #f4f9ff;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background: #0b5ed7;
+            color: white;
+            padding: 15px;
+            text-align: center;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        .question {
+            background: #ffffff;
+            border-left: 6px solid #0b5ed7;
+            padding: 15px;
+            margin-bottom: 15px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            border-radius: 6px;
+        }
+
+        .question h3 {
+            margin: 0 0 10px 0;
+            font-size: 18px;
+        }
+
+        .options {
+            margin-left: 15px;
+        }
+
+        .options p {
+            margin: 5px 0;
+        }
+
+        .answer {
+            margin-top: 8px;
+            color: green;
+            font-weight: bold;
+        }
+
+        footer {
+            background: #0b5ed7;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+
+<body>
+
+<header>
+    <h1>WB Special Educator TET</h1>
+    <p>Set–1 : Child Development & Inclusive Education (বাংলা)</p>
+</header>
+
+<div class="container">
+
+    <div class="question">
+        <h3>১. শিশুর বিকাশ বলতে কী বোঝায়?</h3>
+        <div class="options">
+            <p>A. শুধু শারীরিক বৃদ্ধি</p>
+            <p>B. আচরণের সাময়িক পরিবর্তন</p>
+            <p>C. শারীরিক, মানসিক ও সামাজিক পরিবর্তনের ধারাবাহিক প্রক্রিয়া</p>
+            <p>D. শুধু উচ্চতা বৃদ্ধি</p>
+        </div>
+        <div class="answer">✔ উত্তর: C</div>
+    </div>
+
+    <div class="question">
+        <h3>২. শিশুর বিকাশের কোন নীতি সঠিক?</h3>
+        <div class="options">
+            <p>A. বিকাশ এলোমেলোভাবে ঘটে</p>
+            <p>B. বিকাশ সকল শিশুর ক্ষেত্রে একই</p>
+            <p>C. বিকাশ ধারাবাহিক ও ক্রমান্বিত</p>
+            <p>D. বিকাশ থেমে যেতে পারে</p>
+        </div>
+        <div class="answer">✔ উত্তর: C</div>
+    </div>
+
+    <div class="question">
+        <h3>৩. Inclusive Education বলতে কী বোঝায়?</h3>
+        <div class="options">
+            <p>A. আলাদা বিদ্যালয়ে শিক্ষা</p>
+            <p>B. শুধু বিশেষ শিশুদের শিক্ষা</p>
+            <p>C. সব শিশুকে একসঙ্গে শিক্ষা</p>
+            <p>D. শুধুমাত্র বিশেষ শিক্ষকের শিক্ষা</p>
+        </div>
+        <div class="answer">✔ উত্তর: C</div>
+    </div>
+
+    <div class="question">
+        <h3>৪. CWSN-এর পূর্ণরূপ কী?</h3>
+        <div class="options">
+            <p>A. Children With Social Needs</p>
+            <p>B. Children With Special Needs</p>
+            <p>C. Common Weak Students</p>
+            <p>D. Creative Writing Students</p>
+        </div>
+        <div class="answer">✔ উত্তর: B</div>
+    </div>
+
+</div>
+
+<footer>
+    © 2026 | WB Special Educator TET | Set–1
+</footer>
+
+</body>
+</html>
