--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 Special Education
                 <ul>
                     <li><a href="https://aionline.in.net/SpecialEducationTET.html">Special TET Syllabus</a></li>
-                    <li><a href="https://aionline.in.net/SplEdMcqDemo.html">MCQ Practice – Set Free</a></li>
+                    <li><a href="https://aionline.in.net/SplEdMcqDemo.html">MCQ Practice – Set (Free)</a></li>
                     <li><a href="https://aionline.in.net/SplEdMcq.html">MCQ Practice – Set full version</a> 
                       Child Development & Pedagogy + Inclusive Education, Special Education,   
                       RPwD Act 2016 + RCI Act + IEP + Teaching Strategy, Language + Mathematics + EVS Pedagogy
