--- a/SplEdMcqDemo.html
+++ b/SplEdMcqDemo.html
@@ -34,6 +34,23 @@
             border-radius: 6px;
         }
 
+        /* Logo + Text */
+.logo-box{
+  position: fixed;
+    top: 3%;
+    left: 7%;
+    display:flex;
+    align-items:center;
+  
+}
+
+/* Logo */
+.logo{
+    height:67px;
+    width:auto;
+    filter: drop-shadow(0 2px 4px rgba(0,0,0,0.5));
+}
+
         .question h3 {
             margin: 0 0 10px 0;
             font-size: 18px;
@@ -66,6 +83,11 @@
 <body>
 
 <header>
+    <div class="logo-box">
+     <img src="logo.png" alt="AI Online Logo" class="logo">
+    </div>
+    
+    https://aionline.in.net
     <h1>WB Special Educator TET</h1>
     <p>Set–1 : Child Development & Inclusive Education (বাংলা)</p>
 </header>
